# parser

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  test_env
.github/workflows/: checks.yml  deploy.yml  test_code.yml
alembic/: env.py
alembic/versions/: 5cea67f38bd3_initial.py
app/: config.py  consts.py  db.py  dependencies.py  logging.py  main.py  middleware.py  setup.py  worker.py
app/common/: convertors.py  helpers.py  tasks.py
app/flights/: models.py  routers.py  schemas.py  tasks.py
app/flights/bl/: convertors.py  crud.py  helpers.py
tests/: conftest.py
tests/flights/: test_flights_api.py  test_tasks.py
tests/helpers/: helpers.py
tests/helpers/incoming_files/: 20231020_1234_INV.csv
