[tool.poetry]
name = "parser-app"
version = "0.1.0"
description = "Service for parsing csv files, convert them to json and save to folders"
authors = ["David Tohunts <45290250+ProgrammerOfMoms@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.7"
pydantic = "^1.10.7"
celery = "^5.2.7"
flower = "^1.2.0"
redis = "^4.5.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
httpx = "^0.23.3"
sqlalchemy-utils = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
